# pet-food

./: .dockerignore  .env.example  .gitignore  AGUI_GENUI_REFACTOR_PLAN.md  AGUI_INTEGRATION.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  langgraph.json  main.py  minio_start.bat  pyproject.toml  pytest.ini
.claude/: index.json  settings.local.json
.claude/plan/: fastapi-initialization.md  frontend-backend-integration-status.md  frontend-backend-integration.md
.github/workflows/: build-android.yml  cd-production.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_pets_and_meals.py  003_nutrition_fields_plan_apply_weight_records.py  20260321_1456_12347785a64c_add_ingredients_table.py  20260321_1548_38d6b05c5f09_add_note_dietary_fiber_cholesterol_.py  20260321_1651_5f3c750681de_add_supplements_table.py  20260411_1612_53f28db7acbd_add_todo_items_table.py  20260421_1500_a1b2c3d4e5f6_add_ingredient_ownership.py  20260421_2000_b2c3d4e5f6a7_add_ingredient_icon_and_image.py  20260421_2200_c3d4e5f6a7b8_add_pet_allergens_and_health_issues.py  20260428_1200_d4e5f6a7b8c9_drop_weight_record_unique_constraint.py
deployment/: .env.prod.example  .gitignore  CD_COMPLETE_GUIDE.md  CD_MAINTENANCE.md  CD_PROGRESS_SUMMARY.md  CD_QUICKSTART.md  DOCUMENTATION_SUMMARY.md  QUICK_START_CD.md  README.md  TROUBLESHOOTING.md  debug-webhook.sh  deploy-ghcr.sh  deploy-webhook.sh  deploy.ps1  deploy.sh  docker-compose.cd.yml  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  petfood-webhook.service  rollback-ghcr.sh  rollback.sh  server-setup.sh  setup-cd.sh
deployment/archive/: CD_GITHUB_ACTIONS.md  README.md  deploy-cron.sh
deployment/docs/: SSH密钥原理.md  版本同步检查清单.md  版本统一管理.md  脚本分析和归档计划.md
deployment/docs/01-快速开始/: 快速开始-生产环境定制.md  快速开始指南.md
deployment/docs/02-完整指南/: 完整部署指南.md  生产环境配置-81.71.128.32.md
deployment/docs/03-维护手册/: 日常维护手册.md
deployment/docs/04-故障排查/: 故障排查手册.md
deployment/docs/05-APK打包/: APK打包指南.md
deployment/docs/99-归档/: CD_IMPLEMENTATION_PLAN.md  CD_IMPLEMENTATION_SUMMARY.md
deployment/nginx/: nginx.conf
deployment/nginx/ssl/: README.md
docs/: API_CONFIG.md  API_ERRORS.md  API_REFERENCE.md  ARCHITECTURE.md  AUTH_FLOW.md  DEPLOYMENT.md  PHASE_SUMMARY.md  QUICKSTART.md  README.md
docs/_archive/: AGUI_GENUI_REFACTOR_PLAN.md  README.md
docs/api/: README.md
docs/architecture/: AGENT_BUSINESS_LOGIC.md  README.md
docs/backend/: README.md
docs/deployment/: README.md
docs/from_frontend/: MISSING_APIS.md  USER_FLOWS.md
docs/frontend/: README.md
docs/reference/: ERROR_CODES.md  HYBRID_ARCHITECTURE.md  SSE_EVENTS.md
scripts/: fix-deps.bat  import_ingredients.py  import_supplements.py  run_api.py  start-dev.bat  start-dev.sh  sync-version.sh
src/: __init__.py  __version__.py  models_registry.py
src/agent/: CLAUDE.md  __init__.py  graph.py  node.py  state.py  tools.py
src/agent/common/: context.py  state.py  stream_events.py  tools.py  view_types.py
src/agent/prompts/: prompt.py
src/agent/structrue_agent/: graph.py  node.py  state.py
src/agent/sub_agent/: graph.py  node.py  state.py
src/agent/utils/: context.py  struct.py
src/agent/v0/: graph.py  node.py  state.py  stream_events.py  tools.py
src/agent/v1/: graph.py  models.py  node.py  state.py  tools.py
src/agent/v2/: graph.py  models.py  node.py  state.py  tools.py
src/agent/write_agent/: graph.py  node.py  state.py
src/api/: __init__.py  agui_agent.py  config.py  dependencies.py  main.py
src/api/domain/: __init__.py  email_template.py  verification.py
src/api/infrastructure/: __init__.py  code_generator.py  interfaces.py  minio_storage.py  redis_code_storage.py
src/api/middleware/: auth.py  (+3 more)
src/db/: models.py  redis.py  session.py
src/rag/: CLAUDE.md  component.py  knowledge.py  milvus.py
src/utils/: CLAUDE.md  strtuct.py
tests/: conftest.py  test_agui_agent.py  test_auth.py  test_health.py  test_ingredient_filters.py  test_meals.py  test_pets.py  test_plan_service_agent_selection.py  test_progress_middleware.py  test_services.py  test_tasks.py  test_weights.py
(+135 files in other folders)
