[project]
name = "pet-food"
version = "0.1.0"
description = "基于 LangGraph 多智能体系统的宠物饮食计划智能助手"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-deepseek>=0.1.4",
    "langchain-milvus>=0.2.1",
    "langchain-qwq>=0.2.1",
    "langchain-siliconflow>=0.1.3",
    "langchain-tavily>=0.2.11",
    "langgraph-cli[inmem]>=0.4.14",
    "python-dotenv>=1.1.1",
    # FastAPI 和 Web 服务器
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.37.0",
    "python-multipart>=0.0.20",
    # 认证和安全（直接使用 bcrypt，避免 passlib 版本兼容问题）
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    # 数据库
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Redis
    "redis>=5.2.1",
    # HTTP 客户端
    "httpx>=0.28.1",
    # AG-UI 协议（CopilotKit / LangGraph 集成）
    "ag-ui-langgraph>=0.0.25",
    # 邮件发送
    "aiosmtplib>=3.0.2",
    # 邮箱验证
    "pydantic[email]>=2.11.9",
    "copilotkit>=0.1.78",
    "langgraph>=1.0.10",
    "langchain-dev-utils>=1.4.6",
    "deepagents>=0.4.8",
    "minio==7.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.20.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
